RESOLVED FIXED133875
AX: iOS does not expose ARIA toggle buttons at all (not even as a regular button)
https://bugs.webkit.org/show_bug.cgi?id=133875
Summary AX: iOS does not expose ARIA toggle buttons at all (not even as a regular but...
chris fleizach
Reported 2014-06-13 12:37:52 PDT
iOS does not expose ARIA toggle buttons at all (not even as a regular button) The buttons are not accessible at all. If you remove @aria-pressed, they become regular buttons. <rdar://problem/16732527>
Attachments
patch (4.86 KB, patch)
2014-07-01 16:14 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2014-07-01 16:14:14 PDT
Enrica Casucci
Comment 2 2014-07-01 16:16:32 PDT
Comment on attachment 234212 [details] patch Looks good to me.
WebKit Commit Bot
Comment 3 2014-07-01 16:57:32 PDT
Comment on attachment 234212 [details] patch Clearing flags on attachment: 234212 Committed r170678: <http://trac.webkit.org/changeset/170678>
WebKit Commit Bot
Comment 4 2014-07-01 16:57:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.